Fix bug ihat mcan not download cropped image in some mobile browser

--- a/css/main.css
+++ b/css/main.css
@@ -1,13 +1,63 @@
 body {
   height: 100%;
-  font: 16px/1.8 "Noto Sans", "Noto Sans CJK", "Lato", "Microsoft Jhenghei", "Hiragino Sans GB", "Microsoft YaHei", arial, sans-serif;
-  color: #333;
-  text-shadow: 4px 4px 4px #aaa;
   position: relative;
   margin: 20px auto 20px auto;
   width: auto;
-  text-align: center;
+}
+
+hr {
+  margin: 10px 0;
+  height: 3px;
+  border: none;
+  margin-left: auto;
+  margin-right: auto;
+  width: auto;
   position: relative;
+  display: block;
+  box-sizing: content-box;
+  background-color: #ddd;
+  background-image: repeating-linear-gradient(-45deg, #fff, #fff 4px, transparent 4px, transparent 8px);
+}
+
+.main {
+  text-align: center;
+  font: 16px/1.8 "Noto Sans", "Noto Sans CJK", "Lato", "Microsoft Jhenghei", "Hiragino Sans GB", "Microsoft YaHei", arial, sans-serif;
+  color: #333;
+  text-shadow: 4px 4px 4px #aaa;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+  height: 10px
+}
+
+::-webkit-scrollbar-track {
+  background: 0 0
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #ccc;
+  border-radius: 5px
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #666
+}
+
+::-webkit-scrollbar-corner {
+  background-color: #535353
+}
+
+::-webkit-scrollbar-resizer {
+  background-color: #FF6E00
+}
+
+body ::-webkit-scrollbar {
+  width: 8px
+}
+
+body ::-webkit-scrollbar-thumb {
+  background-color: #ddd
 }
 
 .wrap {
@@ -65,20 +115,6 @@ body {
 ::selection {
   background: #222;
   color: white;
-}
-
-hr {
-  margin: 10px 0;
-  height: 3px;
-  border: none;
-  margin-left: auto;
-  margin-right: auto;
-  width: auto;
-  position: relative;
-  display: block;
-  box-sizing: content-box;
-  background-color: #ddd;
-  background-image: repeating-linear-gradient(-45deg, #fff, #fff 4px, transparent 4px, transparent 8px);
 }
 
 #image {
