--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,12 +1,28 @@
 body {
-    font: 16px/1.8 "Noto Sans", "Noto Sans CJK", "Lato", "Microsoft Jhenghei", "Hiragino Sans GB", "Microsoft YaHei", arial, sans-serif;
-    color: #333;
-    text-shadow: 4px 4px 4px #aaa;
     position: relative;
     margin: 20px 20px 20px 20px;
     width: auto;
-    text-align: center;
+}
+
+hr {
+    margin: 10px 0;
+    height: 3px;
+    border: none;
+    margin-left: auto;
+    margin-right: auto;
+    width: auto;
     position: relative;
+    display: block;
+    box-sizing: content-box;
+    background-color: #ddd;
+    background-image: repeating-linear-gradient(-45deg, #fff, #fff 4px, transparent 4px, transparent 8px);
+}
+
+.main {
+    text-align: center;
+    font: 16px/1.8 "Noto Sans", "Noto Sans CJK", "Lato", "Microsoft Jhenghei", "Hiragino Sans GB", "Microsoft YaHei", arial, sans-serif;
+    color: #333;
+    text-shadow: 4px 4px 4px #aaa;
 }
 
 .preview {
@@ -32,20 +48,6 @@ body {
 
 .image-preview img {
     max-width: 100%;
-}
-
-hr {
-    margin: 10px 0;
-    height: 3px;
-    border: none;
-    margin-left: auto;
-    margin-right: auto;
-    width: auto;
-    position: relative;
-    display: block;
-    box-sizing: content-box;
-    background-color: #ddd;
-    background-image: repeating-linear-gradient(-45deg, #fff, #fff 4px, transparent 4px, transparent 8px);
 }
 
 #image {
